Fixed input width on mobile version.

--- a/02-responsiveness/index.scss
+++ b/02-responsiveness/index.scss
@@ -207,4 +207,8 @@ input{
         display: flex;     
     }
 
+    .long-input {
+        width: 100%;
+    }
+
 }
